--- a/frontend/src/assets/css/style.scss
+++ b/frontend/src/assets/css/style.scss
@@ -29,6 +29,7 @@
 @import './mainpage/_footerall';
 @import './mainpage/_freeboard';
 @import './mainpage/_membershiplist';
+@import './mainpage/_mainposter';
 
 
 
