상영관 리스트 진행중
상영관 리스트 진행중

--- a/frontend/src/assets/css/global.scss
+++ b/frontend/src/assets/css/global.scss
@@ -41,6 +41,10 @@ body {
   letter-spacing: -0.03em;
   font-weight: 500;
   font-family: "Noto Sans KR", "Roboto", "dotum", "sans-serif", "GowunDodum-Regular";
+  // overflow: auto;
+  // white-space: nowrap;
+  // overflow-y: auto;
+  // overflow-x: auto;
 }
 /************* Font *************/
 
