티켓팅 진행중
티켓팅 진행중

--- a/frontend/src/assets/css/global.scss
+++ b/frontend/src/assets/css/global.scss
@@ -33,7 +33,20 @@
   font-weight: normal;
   font-style: normal;
 }
-
+//넥슨 Lv.1 고딕
+@font-face {
+  font-family: 'NEXON Lv1 Gothic OTF';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+//여기어때 잘난체 고딕
+@font-face {
+  font-family: 'JalnanGothic';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_231029@1.1/JalnanGothic.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   // font-family: 'Roboto', 'Noto Sans KR', sans-serif;
   font-size: 12px;
@@ -111,6 +124,9 @@ em, p, address{
   font-size: 17px;
   margin-bottom: 10px;
 }
+
+
+
 /************* common CSS *************/
 
 
