--- a/frontend/src/assets/css/style.scss
+++ b/frontend/src/assets/css/style.scss
@@ -30,6 +30,8 @@
 @import './mainpage/_freeboard';
 @import './mainpage/_membershiplist';
 @import './mainpage/_mainposter';
+@import './mainpage/_mainposter';
+@import './mainpage/_ttdetail';
 
 
 
