영화 예매 페이지 진행중
영화 예매 페이지 진행중

--- a/frontend/src/assets/css/style.scss
+++ b/frontend/src/assets/css/style.scss
@@ -32,6 +32,8 @@
 @import './mainpage/_mainposter';
 @import './mainpage/_mainposter';
 @import './mainpage/_ttdetail';
+@import './mainpage/_ttdetail';
+@import './mainpage/_movielist';
 
 
 
