--- a/frontend/src/assets/css/global.scss
+++ b/frontend/src/assets/css/global.scss
@@ -47,6 +47,28 @@
   font-weight: normal;
   font-style: normal;
 }
+//KCC한빛체
+@font-face {
+  font-family: 'KCC-Hanbit';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2403-2@1.0/KCC-Hanbit.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+//조선가는고딕
+@font-face {
+  font-family: 'ChosunSg';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ChosunSg.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+//고딕 아니고 고딩
+@font-face {
+  font-family: 'Gothic_Goding';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/naverfont_05@1.0/Gothic_Goding.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   // font-family: 'Roboto', 'Noto Sans KR', sans-serif;
   font-size: 12px;
