--- a/frontend/src/assets/css/style.scss
+++ b/frontend/src/assets/css/style.scss
@@ -34,6 +34,9 @@
 @import './mainpage/_ttdetail';
 @import './mainpage/_ttdetail';
 @import './mainpage/_movielist';
+@import './mainpage/_mainticketing';
+
+@import './mainpage/_personseat';
 
 
 
